'sass flexbox main page restyle'
Former-commit-id: 2585162817fd9e9da21d408a561b37f78baf1ced

--- a/css/_standard_mixins.scss
+++ b/css/_standard_mixins.scss
@@ -4,17 +4,23 @@
   display: -webkit-flex;
   display: -ms-flex;
 }
-@mixin b-RadiusOut {
+@mixin RadiusOut {
   border-radius: $outRadius;
   -moz-border-radius: $outRadius;
   -webkit-border-radius: $outRadius;
   -ms-border-radius: $outRadius;
 }
-@mixin b-RadiusIn {
+@mixin RadiusIn {
   border-radius: $inRadius;
   -moz-border-radius: $inRadius;
   -webkit-border-radius: $inRadius;
   -ms-border-radius: $inRadius;
+}
+@mixin RadiusSide {
+  border-radius: $sideRadius;
+  -moz-border-radius: $sideRadius;
+  -webkit-border-radius: $sideRadius;
+  -ms-border-radius: $sideRadius;
 }
 
 @mixin linx ($link, $visit, $hover, $active) {
