--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -1,7 +1,7 @@
 html {
   color: #f7f7dc;
   font: 1rem/1.5rem 'Titillium Web', sans-serif;
-  background: #000 url(https://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
+  background: #000 url(http://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
   margin: 0;
   padding: 0;
   background-size: 1600px; }
@@ -15,8 +15,7 @@ body, ul {
 nav {
   width: 100%;
   position: fixed;
-  top: 0;
-  z-index: 20; }
+  top: 0; }
   nav ul {
     list-style-type: none;
     padding: 0;
@@ -31,13 +30,10 @@ nav {
 
 nav > ul {
   display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  width: 100%;
-  height: 33px;
   justify-content: space-around;
-  align-items: baseline; }
+  align-items: baseline;
+  width: 100%;
+  height: 33px; }
 
 nav > ul li {
   font-size: 18px;
@@ -46,11 +42,6 @@ nav > ul li {
 
 /* Make dropdown menus*/
 nav li > ul {
-  display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  flex-direction: column;
   display: none;
   border-radius: 15px;
   border: 1px solid #666;
@@ -58,60 +49,23 @@ nav li > ul {
   padding: 10px; }
 
 nav li:hover > ul {
-  display: flex; }
+  display: flex;
+  flex-direction: column; }
 
 header {
   display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
   flex-flow: row-reverse wrap;
   justify-content: space-around;
-  height: 200px;
-  padding: 20px 0; }
+  align-items: center;
+  align-content: flex-start;
+  padding: 35px 0;
+  border: 2px dashed yellow; }
 
-.sec1 {
-  flex-grow: 3;
-  min-width: 200px;
-  padding-right: 40px;
-  margin-top: 2vw; }
-  @media only screen and (max-width: 1350px) {
-    .sec1 {
-      flex-grow: 4;
-      margin-top: 5vw; } }
-
-.sec2 {
-  align-self: flex-end;
-  flex-grow: 10;
-  display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  flex-direction: row-reverse;
-  justify-content: flex-start; }
-  .sec2 p {
-    width: 40%;
-    text-align: right;
-    margin-right: 30px;
-    margin-bottom: 25px;
-    align-items: flex-start; }
-
-.accent {
-  font-style: italic;
-  font-weight: 300;
-  font-size: 20px;
-  color: #967832;
-  line-height: 24px;
-  background: rgba(0, 0, 0, 0.7);
-  border-radius: 50px;
-  border: 8px solid black;
-  padding: 12px; }
+#logo {
+  flex: 0 0 40%; }
 
 .container {
   display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
   flex-wrap: wrap;
   justify-content: flex-end;
   align-items: stretch; }
@@ -127,12 +81,8 @@ header {
 
 section {
   display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
   padding: 15px;
-  min-width: 350px;
-  flex: 1;
+  flex: 1 0 350px;
   margin-top: 3vw;
   margin-left: 6vw; }
 
@@ -150,9 +100,6 @@ section {
   -webkit-border-radius: 1.5rem;
   -ms-border-radius: 1.5rem;
   display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
   flex-flow: column nowrap;
   align-items: flex-end;
   margin: 15px; }
@@ -165,13 +112,9 @@ section {
   text-align: right; }
 
 aside {
-  min-width: 250px;
-  flex: 0.5;
+  flex: 0.5 0 0;
   margin-top: 5vw;
   display: flex;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: stretch; }
