--- a/css/content.scss
+++ b/css/content.scss
@@ -1,4 +1,4 @@
-@import '_standard_mixins.scss';
+@import '_layout.scss';
 
 $outerBkgd: rgba(50, 50, 0, 0.5);
 $innerBkgd: rgba(10, 10, 10, 0.6);
@@ -9,22 +9,13 @@ $inRadius: 1.5rem;
 $sideRadius: 1.5rem 0 0 1.5rem;
 $mainPad: 15px;
 $anchorColor: rgb(250, 200, 25);
-$accentBkgd: rgba(0,0,0, 0.7);
-$accentBorder: 8px solid black;
-$accentRad: 50px;
-$accentPad: 12px;
-$accentStyle: italic;
-$accentWeight: 300;
-$accentFsize:20px;
-$accentLnHt: 24px;
-$accentColor: rgb(150, 120, 50);
 $headingColor: rgb(145, 140, 45);
 
 
 html {
     color: rgb(247,247,220);
     font: 1rem/1.5rem 'Titillium Web', sans-serif;
-    background: #000 url(https://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
+    background: #000 url(http://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
     margin:0;
     padding: 0;
     background-size: 1600px;
@@ -40,7 +31,7 @@ nav {
   width: 100%;
   position: fixed;
   top: 0;
-  z-index: 20;
+  //z-index: 20;
 
   ul {
   list-style-type: none;
@@ -59,11 +50,11 @@ nav {
 }
 
 nav > ul {
-  @include flexy;
-  width: 100%;
-  height: 33px;
+  display: flex;
   justify-content: space-around;
   align-items: baseline;
+  width: 100%;
+  height: 33px;
 }
 
 nav > ul li{
@@ -73,67 +64,37 @@ nav > ul li{
 }
 /* Make dropdown menus*/
 nav li > ul /*ul whose parent li is a descendent of nav*/{
-  @include flexy;
-  flex-direction: column;
   display: none;
   border-radius: 15px;
   border: 1px solid #666;
   border-top: none;
   padding: 10px;
-
 }
 
 nav  li:hover > ul /* Statement applies only to
 child ul, only when li is hovered */
 {
   display: flex;
+  flex-direction: column;
 }
 
 header {
-  @include flexy;
+  display: flex;
   flex-flow: row-reverse wrap;
   justify-content: space-around;
-  height: 200px;
-  padding: 20px 0;
+  align-items: center;
+  align-content: flex-start;
+  padding: 35px 0;
+  border: 2px dashed yellow; }
+
+#logo {
+  flex: 0 0 40%;
 }
 
-.sec1 {
-  flex-grow: 3;
-  min-width: 200px;
-  padding-right: 40px;
-  margin-top: 2vw;
-  @media only screen and (max-width: 1350px) {
-    flex-grow: 4;
-    margin-top: 5vw;
-  }
-}
-.sec2 {
-  align-self: flex-end;
-  flex-grow: 10;
-  @include flexy;
-  flex-direction: row-reverse;
-  justify-content: flex-start;
-    p {
-      width: 40%;
-      text-align: right;
-      margin-right: 30px;
-      margin-bottom: 25px;
-      align-items: flex-start;
-    }
-}
-.accent {
-  font-style: $accentStyle;
-  font-weight: $accentWeight;
-  font-size: $accentFsize;
-  color: $accentColor;
-  line-height: $accentLnHt;
-  background: $accentBkgd;
-  border-radius: $accentRad;
-  border: $accentBorder;
-  padding: $accentPad;
-}
+
+
 .container {
-  @include flexy;
+  display: flex;
   @include linx(yellow,rgb(210, 238, 94),rgb(60, 60, 10),
   rgb(60,60,10));
   flex-wrap: wrap;
@@ -142,10 +103,9 @@ header {
 }
 
 section {
-  @include flexy;
+  display: flex;
   padding: $mainPad;
-  min-width: 350px;
-  flex: 1;
+  flex: 1 0 350px;
   margin-top: 3vw;
   margin-left: 6vw;
 }
@@ -157,7 +117,7 @@ section {
 .innerDiv {
   background-color: $innerBkgd;
   @include RadiusIn;
-  @include flexy;
+  display: flex;
   flex-flow: column nowrap;
   align-items: flex-end;
   margin: 15px;
@@ -173,10 +133,9 @@ section {
 }
 
 aside{
-  min-width: 250px;
-  flex: 0.5;
+  flex: 0.5 0 0;
   margin-top: 5vw;
-  @include flexy;
+  display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: stretch;
