--- a/css/maintest.scss
+++ b/css/maintest.scss
@@ -1,46 +1,7 @@
-@import '_standard_mixins.scss';
-@import '_tooltip.scss';
-/*TODO: Put all layout elements in a _layout.scss partial -
-that includes all the variables below, and mixins for the
-main elements of our layout. The current _standard_mixins
-partial will be converted to that.
+@import '_layout.scss';
 
-Incorporate rem for sizing
-and get rid of px.
-
-Incorporate media queries as part of
-elements that need to be responsive but should stack below
-a certain viewer width - there can be as many as you want,
-i was confused, they don't involve an http call. Sass allows
-media queries to be added as properties of a selector.
-
-Make mixins for all the webkit instances.
-
-Make a really good page that people with incompatible
-browsers are taken to, that sells the idea of upgrading,
-and also explains why and has a link to a basic site
-if they absolutely won't or can't.
-
-Add variables and maybe mixins to the _tooltip partial.
-
-Solve:
-  Comment sections, in-house, fully-featured
-  Twitter feed in sidebar that isn't obnoxious
-  RSS feed generator
-  Getting rid of Sketchfab - Three.js canvasses?
-  YouTube channel - replace on the site with Vimeo?
-
-Create reading list, codepens, and video that explains the
-way the css and html works, so others can easily maintain
-or add to it.
-
-Check out Jade and see if the html should also be adapted.
-
-Check out making Atom packages, hacking Atom, and Electron,
-so we can essentially create a custom CMS for Moonwards.
-*/
 $outerBkgd: rgba(50, 50, 0, 0.5);
-$innerBkgd: rgba(10, 10, 10, 0.7);
+$innerBkgd: rgba(10, 10, 10, 0.6);
 $noteBkgd: rgba(0, 0, 0, 0.3);
 $sideBkgd: rgba(0, 0, 0, 0.7);
 $outRadius: 2rem;
@@ -48,22 +9,13 @@ $inRadius: 1.5rem;
 $sideRadius: 1.5rem 0 0 1.5rem;
 $mainPad: 15px;
 $anchorColor: rgb(250, 200, 25);
-$accentBkgd: rgba(0,0,0, 0.7);
-$accentBorder: 8px solid black;
-$accentRad: 50px;
-$accentPad: 12px;
-$accentStyle: italic;
-$accentWeight: 300;
-$accentFsize:20px;
-$accentLnHt: 24px;
-$accentColor: rgb(150, 120, 50);
 $headingColor: rgb(145, 140, 45);
 
 
 html {
     color: rgb(247,247,220);
     font: 1rem/1.5rem 'Titillium Web', sans-serif;
-    background: #000 url(https://www.moonwards.com/img/tycho7left.png) no-repeat fixed right 33px;
+    background: #000 url(http://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
     margin:0;
     padding: 0;
     background-size: 1600px;
@@ -79,7 +31,7 @@ nav {
   width: 100%;
   position: fixed;
   top: 0;
-  z-index: 20;
+  //z-index: 20;
 
   ul {
   list-style-type: none;
@@ -98,11 +50,11 @@ nav {
 }
 
 nav > ul {
-  @include flexy;
-  width: 100%;
-  height: 33px;
+  display: flex;
   justify-content: space-around;
   align-items: baseline;
+  width: 100%;
+  height: 33px;
 }
 
 nav > ul li{
@@ -112,67 +64,47 @@ nav > ul li{
 }
 /* Make dropdown menus*/
 nav li > ul /*ul whose parent li is a descendent of nav*/{
-  @include flexy;
-  flex-direction: column;
   display: none;
   border-radius: 15px;
   border: 1px solid #666;
   border-top: none;
   padding: 10px;
-
 }
 
 nav  li:hover > ul /* Statement applies only to
 child ul, only when li is hovered */
 {
   display: flex;
+  flex-direction: column;
 }
 
 header {
-  @include flexy;
+  display: flex;
   flex-flow: row-reverse wrap;
   justify-content: space-around;
-  height: 290px;
-  padding: 20px 0;
+  align-items: center;
+  align-content: flex-start;
+  padding: 35px 0;
+  border: 2px dashed yellow; }
+
+#logo {
+  flex: 0 0 40%;
 }
 
-.sec1 {
-  flex-grow: 4;
-  min-width: 400px;
-  padding-right: 60px;
-  margin-top: 2vw;
-  @media only screen and (max-width: 1350px) {
-    flex-grow: 6;
-    margin-top: 6vw;
-  }
+#note {
+  flex: 0 0 20%;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 20px;
+  color: #967832;
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 50px;
+  border: 8px solid black;
+  padding: 12px;
 }
-.sec2 {
-  align-self: flex-end;
-  flex-grow: 7;
-  @include flexy;
-  flex-direction: row-reverse;
-  justify-content: flex-start;
-    p {
-      width: 40%;
-      text-align: right;
-      margin-right: 30px;
-      margin-bottom: 25px;
-      align-items: flex-start;
-    }
-}
-.accent {
-  font-style: $accentStyle;
-  font-weight: $accentWeight;
-  font-size: $accentFsize;
-  color: $accentColor;
-  line-height: $accentLnHt;
-  background: $accentBkgd;
-  border-radius: $accentRad;
-  border: $accentBorder;
-  padding: $accentPad;
-}
+
 .container {
-  @include flexy;
+  display: flex;
   @include linx(yellow,rgb(210, 238, 94),rgb(60, 60, 10),
   rgb(60,60,10));
   flex-wrap: wrap;
@@ -181,10 +113,9 @@ header {
 }
 
 section {
-  @include flexy;
+  display: flex;
   padding: $mainPad;
-  min-width: 350px;
-  flex: 1;
+  flex: 1 0 350px;
   margin-top: 3vw;
   margin-left: 6vw;
 }
@@ -196,13 +127,12 @@ section {
 .innerDiv {
   background-color: $innerBkgd;
   @include RadiusIn;
-  @include flexy;
+  display: flex;
   flex-flow: column nowrap;
   align-items: flex-end;
   margin: 15px;
     p {
-      padding: 12px 18px 8px 15px;
-      //margin: 8px;
+      padding: 6px 18px 8px 15px;
     }
 }
 
@@ -213,10 +143,8 @@ section {
 }
 
 aside{
-  min-width: 250px;
-  flex: 0.5;
-  margin-top: 5vw;
-  @include flexy;
+  flex: 0.5 0 250px;
+  display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: stretch;
@@ -253,7 +181,7 @@ h1 {
   font-size: 24px;
   line-height: 28px;
   align-self: center;
-  padding: 15px 0 0 25px;
+  padding: 15px 0 0 45px;
   border-bottom: 1px solid $headingColor;
 }
 
