header layout with flex basis
Former-commit-id: 767889581fe74e0bfaa98060a97829f4459fba69

--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -58,8 +58,7 @@ header {
   justify-content: space-around;
   align-items: center;
   align-content: flex-start;
-  padding: 35px 0;
-  border: 2px dashed yellow; }
+  padding: 35px 0; }
 
 #logo {
   flex: 0 0 40%; }
