--- a/css/main.nest.css
+++ b/css/main.nest.css
@@ -1,7 +1,7 @@
 html {
   color: #f7f7dc;
   font: 1rem/1.5rem 'Titillium Web', sans-serif;
-  background: #000 url(https://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
+  background: #000 url(http://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
   margin: 0;
   padding: 0;
   background-size: 1600px; }
@@ -15,8 +15,7 @@ body, ul {
 nav {
   width: 100%;
   position: fixed;
-  top: 0;
-  z-index: 20; }
+  top: 0; }
   nav ul {
     list-style-type: none;
     padding: 0;
@@ -57,40 +56,19 @@ header {
   display: flex;
   flex-flow: row-reverse wrap;
   justify-content: space-around;
-  height: 360px;
-  padding: 20px 0; }
+  align-items: center;
+  align-content: flex-start;
+  padding: 35px 0; }
 
-.sec1 {
-  flex: 4 2 0;
-  min-width: 400px;
-  padding-right: 6vw;
-  padding-left: 3vw;
-  margin-top: 2vw; }
-  @media only screen and (max-width: 1350px) {
-    .sec1 {
-      flex: 6 1 0;
-      margin-top: 6vw; } }
+#logo {
+  flex: 0 0 40%; }
 
-.sec2 {
-  align-self: center;
-  flex: 7 0 0;
-  min-width: 180px;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-start; }
-  .sec2 p {
-    width: 40%;
-    text-align: right;
-    margin-right: 30px;
-    margin-bottom: 25px;
-    align-items: flex-start; }
-
-.accent {
+#note {
+  flex: 0 0 20%;
   font-style: italic;
   font-weight: 300;
   font-size: 20px;
   color: #967832;
-  line-height: 24px;
   background: rgba(0, 0, 0, 0.7);
   border-radius: 50px;
   border: 8px solid black;
@@ -114,7 +92,6 @@ header {
 section {
   display: flex;
   padding: 15px;
-  min-width: 350px;
   flex: 1 0 350px;
   margin-top: 3vw;
   margin-left: 6vw; }
@@ -141,13 +118,11 @@ section {
 
 .intro {
   font-size: 1rem;
-  line-height: 1.6em;
+  line-height: 1.6rem;
   text-align: right; }
 
 aside {
-  min-width: 250px;
-  flex: 0.5 0;
-  margin-top: 5vw;
+  flex: 0.5 0 250px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
