layout on colonies.html
Former-commit-id: 2314057385810e38198e2e8b391e77e6a147beed

--- a/css/main.nest.css
+++ b/css/main.nest.css
@@ -53,18 +53,21 @@ nav li:hover > ul {
   flex-direction: column; }
 
 header {
+  width: 100%;
   display: flex;
   flex-flow: row-reverse wrap;
   justify-content: space-around;
   align-items: center;
-  align-content: flex-start;
-  padding: 35px 0; }
+  padding: 65px 0; }
 
-#logo {
+#Logo {
   flex: 0 0 40%; }
+  @media only screen and (min-width: 1350px) {
+    #Logo {
+      flex: 0 0 25%; } }
 
 #note {
-  flex: 0 0 20%;
+  flex: 0 0 40%;
   font-style: italic;
   font-weight: 300;
   font-size: 20px;
@@ -72,7 +75,11 @@ header {
   background: rgba(0, 0, 0, 0.7);
   border-radius: 50px;
   border: 8px solid black;
-  padding: 12px; }
+  padding: 12px;
+  text-align: right; }
+  #note p {
+    width: 50%;
+    margin-left: auto; }
 
 .container {
   display: flex;
