--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -54,14 +54,27 @@ nav li:hover > ul {
 
 header {
   display: flex;
-  flex-flow: row-reverse wrap;
-  justify-content: space-around;
+  flex-flow: row-reverse;
+  justify-content: flex-start;
   align-items: center;
   align-content: flex-start;
-  padding: 35px 0; }
+  padding: 35px 0;
+  width: 100%;
+  height: 350px; }
 
-#logo {
-  flex: 0 0 40%; }
+#Logo {
+  flex: 1 1 250px;
+  padding: 10vw; }
+
+.intro {
+  font-size: 1rem;
+  line-height: 1.6rem;
+  text-align: right;
+  background: rgba(50, 50, 0, 0.5);
+  border-radius: 0 1.5rem 1.5rem 0;
+  padding: 20px;
+  margin-left: auto;
+  flex: 3 0 40vw; }
 
 .container {
   display: flex;
@@ -104,11 +117,6 @@ section {
   margin: 15px; }
   .innerDiv p {
     padding: 6px 18px 8px 15px; }
-
-.intro {
-  font-size: 1rem;
-  line-height: 1.6em;
-  text-align: right; }
 
 aside {
   flex: 0.5 0 0;
