--- a/css/content.scss
+++ b/css/content.scss
@@ -1,17 +1,5 @@
 @import '_layout.scss';
 
-$outerBkgd: rgba(50, 50, 0, 0.5);
-$innerBkgd: rgba(10, 10, 10, 0.6);
-$noteBkgd: rgba(0, 0, 0, 0.3);
-$sideBkgd: rgba(0, 0, 0, 0.7);
-$outRadius: 2rem;
-$inRadius: 1.5rem;
-$sideRadius: 1.5rem 0 0 1.5rem;
-$mainPad: 15px;
-$anchorColor: rgb(250, 200, 25);
-$headingColor: rgb(145, 140, 45);
-
-
 html {
     color: rgb(247,247,220);
     font: 1rem/1.5rem 'Titillium Web', sans-serif;
@@ -79,17 +67,29 @@ child ul, only when li is hovered */
 
 header {
   display: flex;
-  flex-flow: row-reverse wrap;
-  justify-content: space-around;
+  flex-flow: row-reverse;
+  justify-content: flex-start;
   align-items: center;
   align-content: flex-start;
   padding: 35px 0;
+  width: 100%;
+  height: 350px;
  }
 
-#logo {
-  flex: 0 0 40%;
+#Logo {
+  flex: 1 1 250px;
+  padding: 10vw;
 }
-
+.intro {
+  font-size: 1rem;
+  line-height: 1.6rem;
+  text-align: right;
+  background: $outerBkgd;
+  border-radius: $introRadius;
+  padding: 20px;
+  margin-left: auto;
+  flex: 3 0 40vw;
+}
 
 
 .container {
@@ -125,11 +125,7 @@ section {
     }
 }
 
-.intro {
-  font-size: 1rem;
-  line-height: 1.6em;
-  text-align: right;
-}
+
 
 aside{
   flex: 0.5 0 0;
