content.css headerfix
Former-commit-id: bd4102ba466e12487909508b49b55764b081d949 [formerly 075110e23dcfaa2afcbb2f0733a912334512801a]
Former-commit-id: 92fe9de5f2a6dd2b4751e2343b237cc5b3947d10

--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -59,8 +59,7 @@ header {
   align-items: center;
   align-content: flex-start;
   padding: 35px 0;
-  width: 100%;
-  height: 350px; }
+  width: 100%; }
 
 #Logo {
   flex: 1 1 250px;
