new lalande img, work on colonies.html
Former-commit-id: 62d138d2f24c8a22e7af94a71232a7aa7dfe3cf8 [formerly 8a77bfe6520b25ddd4b101415998ab3da6b30df8]
Former-commit-id: 2bdaeedc9835c32f07f538242d3d4275b7bb7ee5

--- a/css/content.scss
+++ b/css/content.scss
@@ -71,7 +71,7 @@ header {
   justify-content: flex-start;
   align-items: center;
   align-content: flex-start;
-  padding: 35px 0;
+  padding: 35px 0 0 0;
   width: 100%;
  }
 
@@ -124,10 +124,8 @@ section {
     }
 }
 
-
-
 aside{
-  flex: 0.5 0 0;
+  flex: 0 1 250px;
   margin-top: 5vw;
   display: flex;
   flex-flow: column nowrap;
@@ -138,6 +136,9 @@ aside{
   background-color: $sideBkgd;
   border-radius: $sideRadius;
   padding: $mainPad;
+    img{
+      width: auto;
+    }
 }
 .framewrap {
   position: relative;
