--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -58,7 +58,7 @@ header {
   justify-content: flex-start;
   align-items: center;
   align-content: flex-start;
-  padding: 35px 0;
+  padding: 35px 0 0 0;
   width: 100%; }
 
 #Logo {
@@ -118,7 +118,7 @@ section {
     padding: 6px 18px 8px 15px; }
 
 aside {
-  flex: 0.5 0 0;
+  flex: 0 1 250px;
   margin-top: 5vw;
   display: flex;
   flex-flow: column nowrap;
@@ -129,6 +129,8 @@ aside {
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 1.5rem 0 0 1.5rem;
   padding: 15px; }
+  .sideDiv img {
+    width: auto; }
 
 .framewrap {
   position: relative;
