--- a/css/content.scss
+++ b/css/content.scss
@@ -11,7 +11,7 @@ html {
       background-size: 100% auto;
       }
 }
-body, ul {
+body, ul, figure {
   margin: 0;
 }
 
@@ -103,9 +103,15 @@ header {
 section {
   display: flex;
   padding: $mainPad;
-  flex: 1 0 350px;
+  flex: 3 0 350px;
   margin-top: 3vw;
   margin-left: 6vw;
+    img {
+      padding: 10px;
+    }
+    .gallery {
+      padding: 10px;
+    }
 }
 .outerDiv {
   background-color: $outerBkgd;
@@ -125,19 +131,23 @@ section {
 }
 
 aside{
-  flex: 0 1 250px;
+  flex: 1 1 300px;
   margin-top: 5vw;
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: stretch;
+  @media only screen and (min-width: 1700px) {
+    flex: 2 0 400px;
+  }
 }
 .sideDiv {
   background-color: $sideBkgd;
   border-radius: $sideRadius;
   padding: $mainPad;
     img{
-      width: auto;
+      width: 90%;
+      border: 1px solid $headingColor;
     }
 }
 .framewrap {
@@ -158,17 +168,6 @@ aside{
 }
 .frame4x3 {
   padding-bottom: 75%;
-}
-
-h1 {
-  color: $headingColor;
-  font-weight: 300;
-  font-style: italic;
-  font-size: 24px;
-  line-height: 28px;
-  align-self: center;
-  padding: 15px 0 0 45px;
-  border-bottom: 1px solid $headingColor;
 }
 
 .byline {
