moar iframe grief pleeze
Former-commit-id: d8f06ecb0ab3248a2c25a8703256616ebbc6d4a3 [formerly 56ca51e887e03378cafd888b1a10fd0e6de9ba57]
Former-commit-id: bd44bbf2d92a555749be61106e690e2d9b6ed6c5

--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -125,7 +125,7 @@ section {
   margin-left: 6vw; }
   section img {
     padding: 10px; }
-  section .gallery {
+  section .thumbs {
     padding: 10px; }
 
 .outerDiv {
