--- a/css/content.scss
+++ b/css/content.scss
@@ -109,7 +109,7 @@ section {
     img {
       padding: 10px;
     }
-    .gallery {
+    .thumbs {
       padding: 10px;
     }
 }
@@ -168,6 +168,10 @@ aside{
 }
 .frame4x3 {
   padding-bottom: 75%;
+}
+
+.gallery {
+
 }
 
 .byline {
