--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -123,10 +123,6 @@ section {
   flex: 3 0 350px;
   margin-top: 3vw;
   margin-left: 6vw; }
-  section img {
-    padding: 10px; }
-  section .thumbs {
-    padding: 10px; }
 
 .outerDiv {
   background-color: rgba(50, 50, 0, 0.5);
@@ -148,6 +144,14 @@ section {
   .innerDiv p {
     padding: 6px 18px 8px 15px; }
 
+.thumbs {
+  padding: 10px;
+  display: flex;
+  flex-flow: row wrap; }
+  .thumbs img {
+    padding: 10px;
+    flex: 0 1 auto; }
+
 aside {
   flex: 1 1 300px;
   margin-top: 5vw;
@@ -166,6 +170,31 @@ aside {
   .sideDiv img {
     width: 90%;
     border: 1px solid #918c2d; }
+
+.container_SF_iframe {
+  width: 100%; }
+  .container_SF_iframe a {
+    color: yellow;
+    text-decoration: none; }
+    .container_SF_iframe a:visited {
+      color: #d2ee5e; }
+    .container_SF_iframe a:hover {
+      background-color: #3c3c0a; }
+    .container_SF_iframe a:active {
+      background-color: #3c3c0a; }
+
+.SF-Div {
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 1.5rem;
+  -moz-border-radius: 1.5rem;
+  -webkit-border-radius: 1.5rem;
+  -ms-border-radius: 1.5rem;
+  padding: 15px; }
+
+.SF-caption {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 25px;
+  margin-top: -75px; }
 
 .framewrap {
   position: relative;
