--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -42,7 +42,8 @@ body, ul, figure {
 nav {
   width: 100%;
   position: fixed;
-  top: 0; }
+  top: 0;
+  z-index: 20; }
   nav ul {
     list-style-type: none;
     padding: 0;
