--- a/css/main.nest.css
+++ b/css/main.nest.css
@@ -1,3 +1,30 @@
+/*All color, text styling, and visual touches*/
+h1 {
+  color: #918c2d;
+  font-weight: 300;
+  font-style: italic;
+  font-size: 24px;
+  line-height: 28px;
+  align-self: center;
+  padding: 15px 0 15px 45px;
+  border-bottom: 1px solid #918c2d; }
+
+h2 {
+  color: #918c2d;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 24px;
+  align-self: flex-end;
+  padding: 5px 20px 12px 45px;
+  border-bottom: 1px solid #918c2d; }
+
+figcaption {
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  line-height: 1.1rem;
+  text-align: right;
+  width: 90%; }
+
 html {
   color: #f7f7dc;
   font: 1rem/1.5rem 'Titillium Web', sans-serif;
@@ -15,7 +42,8 @@ body, ul {
 nav {
   width: 100%;
   position: fixed;
-  top: 0; }
+  top: 0;
+  z-index: 20; }
   nav ul {
     list-style-type: none;
     padding: 0;
