remove jekyll, update machines page
Former-commit-id: ec430f3860fda59df1c8127ccbef9541dc731976

--- a/css/content.scss
+++ b/css/content.scss
@@ -157,6 +157,35 @@ aside{
     }
 }
 
+.sidePairTop {
+  background-color: $sideBkgd;
+  border-radius: 1.5rem 0 0 0;
+  padding: $mainPad;
+    img{
+      width: 90%;
+      border: 1px solid $headingColor;
+    }
+}
+.sidePairBottom {
+  background-color: $sideBkgd;
+  border-radius: 0 0 0 1.5rem;
+  padding: 0 15px 15px 15px;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  line-height: 1.1rem;
+  text-align: right;
+}
+
+.sidePairBottomSF {
+  background-color: $sideBkgd;
+  border-radius: 0 0 0 1.5rem;
+  padding: 100 15px 15px 15px;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  line-height: 1.1rem;
+  text-align: right;
+}
+
 .container_SF_iframe {
   @include linx(yellow,rgb(210, 238, 94),rgb(60, 60, 10),
   rgb(60,60,10));
@@ -197,6 +226,10 @@ aside{
 
 .gallery {
 
+}
+
+ul {
+  padding: 2vw 2vw 2vw 4vw;
 }
 
 .byline {
