--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -172,6 +172,32 @@ aside {
     width: 90%;
     border: 1px solid #918c2d; }
 
+.sidePairTop {
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 1.5rem 0 0 0;
+  padding: 15px; }
+  .sidePairTop img {
+    width: 90%;
+    border: 1px solid #918c2d; }
+
+.sidePairBottom {
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 0 0 0 1.5rem;
+  padding: 0 15px 15px 15px;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  line-height: 1.1rem;
+  text-align: right; }
+
+.sidePairBottomSF {
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 0 0 0 1.5rem;
+  padding: 100 15px 15px 15px;
+  font-size: 0.8rem;
+  letter-spacing: 1px;
+  line-height: 1.1rem;
+  text-align: right; }
+
 .container_SF_iframe {
   width: 100%; }
   .container_SF_iframe a {
@@ -213,6 +239,9 @@ aside {
 
 .frame4x3 {
   padding-bottom: 75%; }
+
+ul {
+  padding: 2vw 2vw 2vw 4vw; }
 
 .byline {
   border-top: 1px solid #918c2d;
