adding content to machines and colonies
Former-commit-id: 39455c032279c132288d4268402e76d4e747a2ba

--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -207,7 +207,8 @@ aside {
   -moz-border-radius: 1.5rem;
   -webkit-border-radius: 1.5rem;
   -ms-border-radius: 1.5rem;
-  padding: 15px; }
+  padding: 15px;
+  margin-bottom: 30px; }
 
 .framewrap {
   position: relative;
