add content to colonies.html
Former-commit-id: 785e5df82a74c3f9acf86dd3b1f156ab8148f86d [formerly 2f3536dbe8f01a366b0aac7d6e607bcbb1d764d6]
Former-commit-id: e8f03a7165164a79c3df267c4b97e73c914be111

--- a/css/content.scss
+++ b/css/content.scss
@@ -122,7 +122,7 @@ section {
   align-items: flex-end;
   margin: 15px;
     p {
-      padding: 6px 18px 8px 15px;
+      padding: 6px 18px 0 15px;
     }
 }
 
