--- a/css/content.nest.css
+++ b/css/content.nest.css
@@ -143,7 +143,7 @@ section {
   align-items: flex-end;
   margin: 15px; }
   .innerDiv p {
-    padding: 6px 18px 8px 15px; }
+    padding: 6px 18px 0 15px; }
 
 .thumbs {
   padding: 10px;
