resizable image formatting
Former-commit-id: cae075b554d1444d414edf78ae82c243d752cc50 [formerly 7342bd70beaeb4ada4b7d8b1e3b60f43e48f19d8]
Former-commit-id: 28b95074ae8a6711ae9c0680931492e7bcd54a06

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -32,6 +32,17 @@ h2 {
   padding: 5px 20px 12px 45px;
   border-bottom: 1px solid $headingColor;
 }
+h3 {
+  color: $headingColor;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  align-self: flex-end;
+  padding: 5px 20px 0 45px;
+  margin: 0;
+  border-bottom: 1px solid $headingColor;
+}
+
 figcaption {
   font-size: 0.8rem;
   letter-spacing: 1px;
