--- a/css/learn.nest.css
+++ b/css/learn.nest.css
@@ -1,7 +1,7 @@
 /*All color, text styling, and visual touches*/
 h1 {
   color: #918c2d;
-  font-weight: 300;
+  font-weight: 400;
   font-style: italic;
   font-size: 24px;
   line-height: 28px;
@@ -11,12 +11,21 @@ h1 {
 
 h2 {
   color: #918c2d;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 20px;
   line-height: 24px;
   align-self: flex-end;
   padding: 5px 20px 12px 45px;
   border-bottom: 1px solid #918c2d; }
+
+h5 {
+  color: #918c2d;
+  font-weight: 400;
+  line-height: 20px;
+  font-size: 18px;
+  padding: 4px 20px;
+  margin: 20px 0 5px 0;
+  align-self: center; }
 
 figcaption {
   font-size: 0.8rem;
@@ -145,7 +154,8 @@ section {
   align-items: flex-end;
   margin: 15px; }
   .innerDiv p {
-    padding: 6px 18px 0 15px; }
+    padding: 6px 18px 0 15px;
+    margin: 6px; }
 
 .wide img {
   align-self: center; }
@@ -184,23 +194,6 @@ aside {
     width: 90%;
     border: 1px solid #918c2d; }
 
-.sidePairTop {
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 1.5rem 0 0 0;
-  padding: 15px; }
-  .sidePairTop img {
-    width: 90%;
-    border: 1px solid #918c2d; }
-
-.sidePairBottom {
-  background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 0 0 0 1.5rem;
-  padding: 0 15px 15px 15px;
-  font-size: 0.8rem;
-  letter-spacing: 1px;
-  line-height: 1.1rem;
-  text-align: right; }
-
 .framewrap {
   position: relative;
   height: 0;
@@ -218,5 +211,5 @@ aside {
 .frame4x3 {
   padding-bottom: 75%; }
 
-ul {
-  padding: 2vw 2vw 2vw 4vw; }
+.details {
+  cursor: pointer; }
