--- a/css/learn.scss
+++ b/css/learn.scss
@@ -116,6 +116,7 @@ section {
   margin: 15px;
     p {
       padding: 6px 18px 0 15px;
+      margin: 6px;
     }
   }
 .wide {
@@ -123,6 +124,7 @@ section {
     align-self: center;
   }
 }
+
 .imgResize {
     flex: auto;
     align-self: center;
@@ -164,25 +166,6 @@ aside{
     }
 }
 
-.sidePairTop {
-  background-color: $sideBkgd;
-  border-radius: 1.5rem 0 0 0;
-  padding: $mainPad;
-    img{
-      width: 90%;
-      border: 1px solid $headingColor;
-    }
-}
-.sidePairBottom {
-  background-color: $sideBkgd;
-  border-radius: 0 0 0 1.5rem;
-  padding: 0 15px 15px 15px;
-  font-size: 0.8rem;
-  letter-spacing: 1px;
-  line-height: 1.1rem;
-  text-align: right;
-}
-
 .framewrap {
   position: relative;
   height: 0;
@@ -203,7 +186,6 @@ aside{
   padding-bottom: 75%;
 }
 
-
-ul {
-  padding: 2vw 2vw 2vw 4vw;
+.details {
+  cursor: pointer;
 }
