--- a/css/main.scss
+++ b/css/main.scss
@@ -198,3 +198,12 @@ h1 {
   margin-right: 20px;
   letter-spacing: 2px;
 }
+
+.datetime {
+  color: #888;
+  font-size: 12px;
+
+}
+.title {
+  padding: 0 5px;
+}
