--- a/css/content.scss
+++ b/css/content.scss
@@ -98,14 +98,27 @@ header {
   flex-wrap: wrap;
   justify-content: flex-end;
   align-items: flex-start;
+  width: 100%;
 }
 
 section {
   display: flex;
   padding: $mainPad;
   flex: 3 0 350px;
+  flex-direction: column;
   margin-top: 3vw;
   margin-left: 6vw;
+}
+aside{
+  flex: 1 1 300px;
+  margin-top: 5vw;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  @media only screen and (min-width: 1700px) {
+    flex: 2 0 400px;
+  }
 }
 .outerDiv {
   background-color: $outerBkgd;
@@ -123,12 +136,19 @@ section {
       padding: 6px 18px 0 15px;
     }
 }
+
+.pixWrap {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  margin: 15px;
+}
 .pixHeader {
   background-color: $innerBkgd;
   border-radius: 15px 15px 0 0;
   margin: 15px 15px 0 15px;
 }
-.pixWrap {
+.pixBody {
   background-color: $innerBkgd;
   border-radius: 0 0 15px 15px;
   display: flex;
@@ -136,7 +156,6 @@ section {
   align-items: center;
   margin: 0 15px 15px 15px;
 }
-
 div .gallery {
   flex: auto;
   width: 500px;
@@ -147,10 +166,9 @@ div .gallery {
   }
 }
 
-.thumbs {
+.pix {
   margin: 1vw;
   flex: auto;
-  width: 150px;
   align-items: center;
   img {
     width: 100%;
@@ -158,17 +176,7 @@ div .gallery {
   }
 }
 
-aside{
-  flex: 1 1 300px;
-  margin-top: 5vw;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  @media only screen and (min-width: 1700px) {
-    flex: 2 0 400px;
-  }
-}
+
 .sideDiv {
   background-color: $sideBkgd;
   border-radius: $sideRadius;
