--- a/css/_layout.nest.css
+++ b/css/_layout.nest.css
@@ -15,16 +15,17 @@ h2 {
   font-size: 20px;
   line-height: 24px;
   align-self: flex-end;
-  padding: 5px 20px 12px 45px;
+  padding: 15px 20px 12px 45px;
+  margin: 0;
   border-bottom: 1px solid #918c2d; }
 
 h3 {
   color: #918c2d;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 24px;
   align-self: flex-end;
-  padding: 5px 20px 0 45px;
+  padding: 15px 4vw 0 8vw;
   margin: 0;
   border-bottom: 1px solid #918c2d; }
 
