--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,6 +1,6 @@
 /*All color, text styling, and visual touches*/
 
-$outerBkgd: rgba(50, 50, 0, 0.5);
+$outerBkgd: rgba(50, 50, 0, 0.6);
 $innerBkgd: rgba(10, 10, 10, 0.6);
 $noteBkgd: rgba(0, 0, 0, 0.3);
 $sideBkgd: rgba(0, 0, 0, 0.7);
@@ -29,16 +29,17 @@ h2 {
   font-size: 20px;
   line-height: 24px;
   align-self: flex-end;
-  padding: 5px 20px 12px 45px;
+  padding: 15px 20px 12px 45px;
+  margin: 0;
   border-bottom: 1px solid $headingColor;
 }
 h3 {
   color: $headingColor;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 24px;
   align-self: flex-end;
-  padding: 5px 20px 0 45px;
+  padding: 15px 4vw 0 8vw;
   margin: 0;
   border-bottom: 1px solid $headingColor;
 }
