--- a/css/learn.nest.css
+++ b/css/learn.nest.css
@@ -42,6 +42,9 @@ input[type="text"] {
   margin-bottom: 0;
   padding-bottom: 0; }
 
+ul {
+  padding: 2vw 2vw 2vw 4vw; }
+
 html {
   color: #f7f7dc;
   font: 1rem/1.5rem 'Titillium Web', sans-serif;
@@ -114,7 +117,7 @@ header {
   font-size: 1rem;
   line-height: 1.6rem;
   text-align: right;
-  background: rgba(50, 50, 0, 0.5);
+  background: rgba(50, 50, 0, 0.6);
   border-radius: 0 1.5rem 1.5rem 0;
   padding: 20px;
   margin-left: auto;
@@ -137,7 +140,7 @@ section {
       background-color: #3c3c0a; }
 
 .outerDiv {
-  background-color: rgba(50, 50, 0, 0.5);
+  background-color: rgba(50, 50, 0, 0.6);
   border-radius: 2rem;
   -moz-border-radius: 2rem;
   -webkit-border-radius: 2rem;
