--- a/css/main.nest.css
+++ b/css/main.nest.css
@@ -15,16 +15,17 @@ h2 {
   font-size: 20px;
   line-height: 24px;
   align-self: flex-end;
-  padding: 5px 20px 12px 45px;
+  padding: 15px 20px 12px 45px;
+  margin: 0;
   border-bottom: 1px solid #918c2d; }
 
 h3 {
   color: #918c2d;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 24px;
   align-self: flex-end;
-  padding: 5px 20px 0 45px;
+  padding: 15px 4vw 0 8vw;
   margin: 0;
   border-bottom: 1px solid #918c2d; }
 
@@ -142,7 +143,7 @@ section {
   margin-left: 6vw; }
 
 .outerDiv {
-  background-color: rgba(50, 50, 0, 0.5);
+  background-color: rgba(50, 50, 0, 0.6);
   border-radius: 2rem;
   -moz-border-radius: 2rem;
   -webkit-border-radius: 2rem;
