--- a/css/content.scss
+++ b/css/content.scss
@@ -1,4 +1,5 @@
 @import '_layout.scss';
+@import '_tooltipster.scss';
 
 html {
     color: rgb(247,247,220);
@@ -143,8 +144,8 @@ aside{
   align-items: center;
   margin: 15px;
     p {
-      margin-top: 5px;
-      padding-bottom: 10px;
+      margin: 5px;
+      padding: 10px;
     }
 }
 .pixHeader {
@@ -174,6 +175,7 @@ div .gallery {
   margin: 1vw;
   flex: auto;
   align-items: center;
+  border: 1px solid rgb(80, 80, 0);
   img {
     width: 100%;
     height: auto;
